parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     expression -> LPAREN expression RPAREN
Rule 5     expression -> NUMBER
Rule 6     expression -> NAME
Rule 7     inst -> NAME EQUAL expression SEMICOLON
Rule 8     assign -> NAME EQUAL expression
Rule 9     expressions -> expression COMMA expressions
Rule 10    expressions -> expression
Rule 11    inst -> PRINT LPAREN params RPAREN SEMICOLON
Rule 12    inst -> PRINT LPAREN expressions RPAREN SEMICOLON
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> expression AND expression
Rule 18    expression -> expression EQUALS expression
Rule 19    expression -> expression LOWER expression
Rule 20    expression -> expression HIGHER expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    inst -> IF LPAREN expression RPAREN THEN inst
Rule 23    inst -> IF LPAREN expression RPAREN THEN inst ELSE inst
Rule 24    inst -> WHILE LPAREN expression RPAREN DO linst END SEMICOLON
Rule 25    inst -> FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON
Rule 26    params -> NAME COMMA params
Rule 27    params -> NAME
Rule 28    inst -> FUNCTION NAME LPAREN params RPAREN linst END SEMICOLON
Rule 29    inst -> FUNCTION NAME LPAREN RPAREN linst END SEMICOLON
Rule 30    inst -> NAME LPAREN expressions RPAREN SEMICOLON
Rule 31    inst -> NAME LPAREN params RPAREN SEMICOLON
Rule 32    inst -> NAME LPAREN RPAREN SEMICOLON

Terminals, with rules where they appear

AND                  : 17
COMMA                : 9 26
DIVIDE               : 21
DO                   : 24 25
ELSE                 : 23
END                  : 24 25 28 29
EQUAL                : 7 8
EQUALS               : 18
FOR                  : 25
FUNCTION             : 28 29
HIGHER               : 20
IF                   : 22 23
LOWER                : 19
LPAREN               : 4 11 12 22 23 24 25 28 29 30 31 32
MINUS                : 14
NAME                 : 6 7 8 26 27 28 29 30 31 32
NUMBER               : 5
OR                   : 16
PLUS                 : 13
PRINT                : 11 12
RPAREN               : 4 11 12 22 23 24 25 28 29 30 31 32
SEMICOLON            : 7 11 12 24 25 25 25 28 29 30 31 32
THEN                 : 22 23
TIMES                : 15
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

assign               : 25 25
expression           : 4 7 8 9 10 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23 24 25
expressions          : 9 12 30
inst                 : 2 3 22 23 23
linst                : 1 2 24 25 28 29
params               : 11 26 28 31
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (7) inst -> . NAME EQUAL expression SEMICOLON
    (11) inst -> . PRINT LPAREN params RPAREN SEMICOLON
    (12) inst -> . PRINT LPAREN expressions RPAREN SEMICOLON
    (22) inst -> . IF LPAREN expression RPAREN THEN inst
    (23) inst -> . IF LPAREN expression RPAREN THEN inst ELSE inst
    (24) inst -> . WHILE LPAREN expression RPAREN DO linst END SEMICOLON
    (25) inst -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON
    (28) inst -> . FUNCTION NAME LPAREN params RPAREN linst END SEMICOLON
    (29) inst -> . FUNCTION NAME LPAREN RPAREN linst END SEMICOLON
    (30) inst -> . NAME LPAREN expressions RPAREN SEMICOLON
    (31) inst -> . NAME LPAREN params RPAREN SEMICOLON
    (32) inst -> . NAME LPAREN RPAREN SEMICOLON

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (7) inst -> . NAME EQUAL expression SEMICOLON
    (11) inst -> . PRINT LPAREN params RPAREN SEMICOLON
    (12) inst -> . PRINT LPAREN expressions RPAREN SEMICOLON
    (22) inst -> . IF LPAREN expression RPAREN THEN inst
    (23) inst -> . IF LPAREN expression RPAREN THEN inst ELSE inst
    (24) inst -> . WHILE LPAREN expression RPAREN DO linst END SEMICOLON
    (25) inst -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON
    (28) inst -> . FUNCTION NAME LPAREN params RPAREN linst END SEMICOLON
    (29) inst -> . FUNCTION NAME LPAREN RPAREN linst END SEMICOLON
    (30) inst -> . NAME LPAREN expressions RPAREN SEMICOLON
    (31) inst -> . NAME LPAREN params RPAREN SEMICOLON
    (32) inst -> . NAME LPAREN RPAREN SEMICOLON

    $end            reduce using rule 1 (start -> linst .)
    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    inst                           shift and go to state 10

state 3

    (3) linst -> inst .

    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    IF              reduce using rule 3 (linst -> inst .)
    WHILE           reduce using rule 3 (linst -> inst .)
    FOR             reduce using rule 3 (linst -> inst .)
    FUNCTION        reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)
    END             reduce using rule 3 (linst -> inst .)


state 4

    (7) inst -> NAME . EQUAL expression SEMICOLON
    (30) inst -> NAME . LPAREN expressions RPAREN SEMICOLON
    (31) inst -> NAME . LPAREN params RPAREN SEMICOLON
    (32) inst -> NAME . LPAREN RPAREN SEMICOLON

    EQUAL           shift and go to state 11
    LPAREN          shift and go to state 12


state 5

    (11) inst -> PRINT . LPAREN params RPAREN SEMICOLON
    (12) inst -> PRINT . LPAREN expressions RPAREN SEMICOLON

    LPAREN          shift and go to state 13


state 6

    (22) inst -> IF . LPAREN expression RPAREN THEN inst
    (23) inst -> IF . LPAREN expression RPAREN THEN inst ELSE inst

    LPAREN          shift and go to state 14


state 7

    (24) inst -> WHILE . LPAREN expression RPAREN DO linst END SEMICOLON

    LPAREN          shift and go to state 15


state 8

    (25) inst -> FOR . LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON

    LPAREN          shift and go to state 16


state 9

    (28) inst -> FUNCTION . NAME LPAREN params RPAREN linst END SEMICOLON
    (29) inst -> FUNCTION . NAME LPAREN RPAREN linst END SEMICOLON

    NAME            shift and go to state 17


state 10

    (2) linst -> linst inst .

    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    IF              reduce using rule 2 (linst -> linst inst .)
    WHILE           reduce using rule 2 (linst -> linst inst .)
    FOR             reduce using rule 2 (linst -> linst inst .)
    FUNCTION        reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)
    END             reduce using rule 2 (linst -> linst inst .)


state 11

    (7) inst -> NAME EQUAL . expression SEMICOLON
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 19

state 12

    (30) inst -> NAME LPAREN . expressions RPAREN SEMICOLON
    (31) inst -> NAME LPAREN . params RPAREN SEMICOLON
    (32) inst -> NAME LPAREN . RPAREN SEMICOLON
    (9) expressions -> . expression COMMA expressions
    (10) expressions -> . expression
    (26) params -> . NAME COMMA params
    (27) params -> . NAME
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    RPAREN          shift and go to state 24
    NAME            shift and go to state 22
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21

    expressions                    shift and go to state 23
    params                         shift and go to state 25
    expression                     shift and go to state 26

state 13

    (11) inst -> PRINT LPAREN . params RPAREN SEMICOLON
    (12) inst -> PRINT LPAREN . expressions RPAREN SEMICOLON
    (26) params -> . NAME COMMA params
    (27) params -> . NAME
    (9) expressions -> . expression COMMA expressions
    (10) expressions -> . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    NAME            shift and go to state 22
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21

    params                         shift and go to state 27
    expressions                    shift and go to state 28
    expression                     shift and go to state 26

state 14

    (22) inst -> IF LPAREN . expression RPAREN THEN inst
    (23) inst -> IF LPAREN . expression RPAREN THEN inst ELSE inst
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 29

state 15

    (24) inst -> WHILE LPAREN . expression RPAREN DO linst END SEMICOLON
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 30

state 16

    (25) inst -> FOR LPAREN . assign SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON
    (8) assign -> . NAME EQUAL expression

    NAME            shift and go to state 32

    assign                         shift and go to state 31

state 17

    (28) inst -> FUNCTION NAME . LPAREN params RPAREN linst END SEMICOLON
    (29) inst -> FUNCTION NAME . LPAREN RPAREN linst END SEMICOLON

    LPAREN          shift and go to state 33


state 18

    (6) expression -> NAME .

    SEMICOLON       reduce using rule 6 (expression -> NAME .)
    PLUS            reduce using rule 6 (expression -> NAME .)
    MINUS           reduce using rule 6 (expression -> NAME .)
    TIMES           reduce using rule 6 (expression -> NAME .)
    OR              reduce using rule 6 (expression -> NAME .)
    AND             reduce using rule 6 (expression -> NAME .)
    EQUALS          reduce using rule 6 (expression -> NAME .)
    LOWER           reduce using rule 6 (expression -> NAME .)
    HIGHER          reduce using rule 6 (expression -> NAME .)
    DIVIDE          reduce using rule 6 (expression -> NAME .)
    RPAREN          reduce using rule 6 (expression -> NAME .)
    COMMA           reduce using rule 6 (expression -> NAME .)


state 19

    (7) inst -> NAME EQUAL expression . SEMICOLON
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . EQUALS expression
    (19) expression -> expression . LOWER expression
    (20) expression -> expression . HIGHER expression
    (21) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    EQUALS          shift and go to state 40
    LOWER           shift and go to state 41
    HIGHER          shift and go to state 42
    DIVIDE          shift and go to state 43


state 20

    (4) expression -> LPAREN . expression RPAREN
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 44

state 21

    (5) expression -> NUMBER .

    SEMICOLON       reduce using rule 5 (expression -> NUMBER .)
    PLUS            reduce using rule 5 (expression -> NUMBER .)
    MINUS           reduce using rule 5 (expression -> NUMBER .)
    TIMES           reduce using rule 5 (expression -> NUMBER .)
    OR              reduce using rule 5 (expression -> NUMBER .)
    AND             reduce using rule 5 (expression -> NUMBER .)
    EQUALS          reduce using rule 5 (expression -> NUMBER .)
    LOWER           reduce using rule 5 (expression -> NUMBER .)
    HIGHER          reduce using rule 5 (expression -> NUMBER .)
    DIVIDE          reduce using rule 5 (expression -> NUMBER .)
    COMMA           reduce using rule 5 (expression -> NUMBER .)
    RPAREN          reduce using rule 5 (expression -> NUMBER .)


state 22

    (26) params -> NAME . COMMA params
    (27) params -> NAME .
    (6) expression -> NAME .

  ! shift/reduce conflict for COMMA resolved as shift
  ! reduce/reduce conflict for RPAREN resolved using rule 6 (expression -> NAME .)
    COMMA           shift and go to state 45
    PLUS            reduce using rule 6 (expression -> NAME .)
    MINUS           reduce using rule 6 (expression -> NAME .)
    TIMES           reduce using rule 6 (expression -> NAME .)
    OR              reduce using rule 6 (expression -> NAME .)
    AND             reduce using rule 6 (expression -> NAME .)
    EQUALS          reduce using rule 6 (expression -> NAME .)
    LOWER           reduce using rule 6 (expression -> NAME .)
    HIGHER          reduce using rule 6 (expression -> NAME .)
    DIVIDE          reduce using rule 6 (expression -> NAME .)
    RPAREN          reduce using rule 6 (expression -> NAME .)

  ! RPAREN          [ reduce using rule 27 (params -> NAME .) ]
  ! COMMA           [ reduce using rule 6 (expression -> NAME .) ]


state 23

    (30) inst -> NAME LPAREN expressions . RPAREN SEMICOLON

    RPAREN          shift and go to state 46


state 24

    (32) inst -> NAME LPAREN RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 47


state 25

    (31) inst -> NAME LPAREN params . RPAREN SEMICOLON

    RPAREN          shift and go to state 48


state 26

    (9) expressions -> expression . COMMA expressions
    (10) expressions -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . EQUALS expression
    (19) expression -> expression . LOWER expression
    (20) expression -> expression . HIGHER expression
    (21) expression -> expression . DIVIDE expression

    COMMA           shift and go to state 49
    RPAREN          reduce using rule 10 (expressions -> expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    EQUALS          shift and go to state 40
    LOWER           shift and go to state 41
    HIGHER          shift and go to state 42
    DIVIDE          shift and go to state 43


state 27

    (11) inst -> PRINT LPAREN params . RPAREN SEMICOLON

    RPAREN          shift and go to state 50


state 28

    (12) inst -> PRINT LPAREN expressions . RPAREN SEMICOLON

    RPAREN          shift and go to state 51


state 29

    (22) inst -> IF LPAREN expression . RPAREN THEN inst
    (23) inst -> IF LPAREN expression . RPAREN THEN inst ELSE inst
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . EQUALS expression
    (19) expression -> expression . LOWER expression
    (20) expression -> expression . HIGHER expression
    (21) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    EQUALS          shift and go to state 40
    LOWER           shift and go to state 41
    HIGHER          shift and go to state 42
    DIVIDE          shift and go to state 43


state 30

    (24) inst -> WHILE LPAREN expression . RPAREN DO linst END SEMICOLON
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . EQUALS expression
    (19) expression -> expression . LOWER expression
    (20) expression -> expression . HIGHER expression
    (21) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 53
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    EQUALS          shift and go to state 40
    LOWER           shift and go to state 41
    HIGHER          shift and go to state 42
    DIVIDE          shift and go to state 43


state 31

    (25) inst -> FOR LPAREN assign . SEMICOLON expression SEMICOLON assign RPAREN DO linst END SEMICOLON

    SEMICOLON       shift and go to state 54


state 32

    (8) assign -> NAME . EQUAL expression

    EQUAL           shift and go to state 55


state 33

    (28) inst -> FUNCTION NAME LPAREN . params RPAREN linst END SEMICOLON
    (29) inst -> FUNCTION NAME LPAREN . RPAREN linst END SEMICOLON
    (26) params -> . NAME COMMA params
    (27) params -> . NAME

    RPAREN          shift and go to state 58
    NAME            shift and go to state 56

    params                         shift and go to state 57

state 34

    (7) inst -> NAME EQUAL expression SEMICOLON .

    NAME            reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    PRINT           reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    IF              reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    WHILE           reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    FOR             reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    FUNCTION        reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    $end            reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    END             reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)
    ELSE            reduce using rule 7 (inst -> NAME EQUAL expression SEMICOLON .)


state 35

    (13) expression -> expression PLUS . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 59

state 36

    (14) expression -> expression MINUS . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 60

state 37

    (15) expression -> expression TIMES . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 61

state 38

    (16) expression -> expression OR . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression

    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 21
    NAME            shift and go to state 18

    expression                     shift and go to state 62

state 39

    (17) expression -> expression AND . expression
    (4) expression -> . LPAREN expression RPAREN
    (5) expression -> . NUMBER
    (6) expression -> . NAME
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression EQUALS expression
    (19) expression -> . expression LOWER expression
    (20) expression -> . expression HIGHER expression
    (21) expression -> . expression DIVIDE expression
